--- a/apps/python_api/functions/requirements.txt
+++ b/apps/python_api/functions/requirements.txt
@@ -9,24 +9,51 @@ attrs==23.1.0
 backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.0.1
+blinker==1.6.2
+CacheControl==0.13.1
+cachetools==5.3.1
 certifi==2023.7.22
+cffi==1.15.1
 charset-normalizer==3.2.0
 chroma-hnswlib==0.7.3
 chromadb==0.4.12
 click==8.1.7
+cloudevents==1.9.0
 coloredlogs==15.0.1
 comm==0.1.4
+cryptography==41.0.4
 dataclasses-json==0.6.0
 debugpy==1.8.0
 decorator==5.1.1
+deprecation==2.1.0
 dill==0.3.7
 executing==1.2.0
 fastapi==0.99.1
 filelock==3.12.4
+firebase-admin==6.2.0
+firebase-functions==0.1.1
+Flask==2.3.3
+Flask-Cors==4.0.0
 flatbuffers==23.5.26
 frozenlist==1.4.0
 fsspec==2023.9.2
+functions-framework==3.4.0
+google-api-core==2.12.0
+google-api-python-client==2.101.0
+google-auth==2.23.0
+google-auth-httplib2==0.1.1
+google-cloud-core==2.3.3
+google-cloud-firestore==2.12.0
+google-cloud-storage==2.11.0
+google-crc32c==1.5.0
+google-events==0.11.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.60.0
+grpcio==1.58.0
+grpcio-status==1.58.0
+gunicorn==20.1.0
 h11==0.14.0
+httplib2==0.22.0
 httptools==0.6.0
 huggingface-hub==0.16.4
 humanfriendly==10.0
@@ -35,7 +62,9 @@ importlib-resources==6.1.0
 ipykernel==6.25.2
 ipython==8.15.0
 isort==5.12.0
+itsdangerous==2.1.2
 jedi==0.19.0
+Jinja2==3.1.2
 jsonpatch==1.33
 jsonpointer==2.4
 jupyter_client==8.3.1
@@ -43,11 +72,13 @@ jupyter_core==5.3.1
 langchain==0.0.300
 langsmith==0.0.40
 lazy-object-proxy==1.9.0
+MarkupSafe==2.1.3
 marshmallow==3.20.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 monotonic==1.6
 mpmath==1.3.0
+msgpack==1.0.6
 multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
@@ -63,14 +94,20 @@ pickleshare==0.7.5
 platformdirs==3.10.0
 posthog==3.0.2
 prompt-toolkit==3.0.39
+proto-plus==1.22.3
 protobuf==4.24.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pulsar-client==3.3.0
 pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 pydantic==1.10.12
 Pygments==2.16.1
+PyJWT==2.8.0
 pylint==2.17.5
+pyparsing==3.1.1
 pypdf==3.16.1
 PyPika==0.48.9
 python-dateutil==2.8.2
@@ -79,6 +116,7 @@ PyYAML==6.0.1
 pyzmq==25.1.1
 regex==2023.8.8
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
@@ -95,11 +133,14 @@ traitlets==5.10.0
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
-urllib3==2.0.5
+uritemplate==4.1.1
+urllib3==1.26.16
 uvicorn==0.23.2
 uvloop==0.17.0
+watchdog==3.0.0
 watchfiles==0.20.0
 wcwidth==0.2.6
 websockets==11.0.3
+Werkzeug==2.3.7
 wrapt==1.15.0
 yarl==1.9.2
