--- a/apps/flutter_app/pubspec.yaml
+++ b/apps/flutter_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   easy_localization: ^3.0.2
   path_provider: ^2.0.15
   logger: ^2.0.1
+  syncfusion_flutter_pdf: ^23.1.38
 
   # firebase
   firebase_core: ^2.15.0
