refactor: home screen + submit cubit

--- a/apps/flutter_app/pubspec.yaml
+++ b/apps/flutter_app/pubspec.yaml
@@ -12,7 +12,6 @@ dependencies:
   # ui
   gap: ^3.0.1
   wolt_responsive_layout_grid: ^0.0.3
-  drop_zone: ^1.0.2
   file_picker: ^5.3.3
 
   # utils
@@ -20,14 +19,15 @@ dependencies:
   easy_localization: ^3.0.2
   path_provider: ^2.0.15
   logger: ^2.0.1
-  syncfusion_flutter_pdf: ^23.1.38
-
+  dio: ^5.3.3
+  
   # firebase
   firebase_core: ^2.15.0
   firebase_core_web: ^2.6.0
   firebase_auth: ^4.7.0
   firebase_auth_web: ^5.6.0
-  firebase_dynamic_links: ^5.3.4
+  firebase_storage: ^11.4.0
+  firebase_storage_web: ^3.6.11
 
   # state management
   flutter_bloc: ^8.1.3
